force-app/main/default/objects/ASF_Retry_Matrix__mdt/ASF_Retry_Matrix__mdt.object-meta.xml
<CustomObject>
    <description>This is used in ASF_RetryIntegrations class, to find out what platform Event to be republish for Non-ASF Integration Related callouts.</description>
    <label>ASF_Retry_Matrix</label>
    <pluralLabel>ASF_Retry_Matrix</pluralLabel>
</CustomObject>