force-app/main/default/objects/ASF_Retry_Matrix__mdt/fields/Platform_Event_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Platform_Event_API_Name__c</fullName>
    <label>Platform Event API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>