force-app/main/default/objects/ASF_Retry_Matrix__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This is the Type of Integration. take the value from Case Integration Objects Type field.</description>
    <label>Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>